:sparkles: Added Authentication class and unit Test